# aspire-analyses

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  README.md  environment.yml  pyproject.toml
.github/docker/: Dockerfile
.github/workflows/: build-container.yml  pages.yml
data_releases/: .gitignore  Makefile  README.md  config.mk  fetch_results_from_yaml.py  results_first_paper.yaml
docs/: Makefile  _config.yml  _toc.yml  environment.md  intro.md
docs/aspire_paper/: .gitignore  analyses.md  config.mk  intro.md  releases.md
docs/toy_examples/: intro.md
gw/data/: .gitignore  GW150914-injection.prior  Makefile  config.mk  generate_data.py  generate_injection_parameter.py  generate_injection_parameters.py  q3-eccentric-injection.prior  q4-HM-injection.prior
gw/data/calibration_envelopes/: 2019-11-01_O3_LHO_GPSTime_1244415456_C01_RelativeResponseUncertainty_FinalResults.txt  2019-11-01_O3_LLO_GPSTime_1244415456_C01_RelativeResponseUncertainty_FinalResults.txt  V_O3a_calibrationUncertaintyEnvelope_magnitude5percent_phase35milliradians10microseconds.txt
gw/injections/GW150914_injection/: GW150914_XPHM_IMRPhenomD_dynesty.ini  GW150914_XPHM_IMRPhenomD_dynesty_to_IMRPhenomPv2.ini  GW150914_XPHM_IMRPhenomPv2_dynesty.ini  GW150914_XPHM_IMRPhenomPv2_dynesty_to_IMRPhenomXPHM.ini  GW150914_XPHM_IMRPhenomPv2_poppy_to_IMRPhenomXPHM.ini  GW150914_XPHM_IMRPhenomXO4a_dynesty.ini  GW150914_XPHM_IMRPhenomXPHM_dynesty.ini  (+1 more)
gw/plots/first_paper/: Makefile  (+6 more)
gw/real_data/: .gitignore
src/aspire_analysis_tools/: utils.py
toy_examples/: biased_initial_samples.ipynb
(+33 files in other folders)
