[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "poppy-analysis-tools"
description = "Tools for poppy-analyses"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "bilby",
]
dynamic = ["version"]

[project.scripts]
pat_plot_comparison = "poppy_analysis_tools.cli.plot_comparison:main"

[tool.setuptools_scm]
