[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aspire-analysis-tools"
description = "Tools for aspire-analyses"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "bilby",
]
dynamic = ["version"]

[project.scripts]
aat_plot_comparison = "aspire_analysis_tools.cli.plot_comparison:main"

[tool.setuptools_scm]
